# YouTube_Automation

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  update_notifications.py  versioneer.py
ytad/: __init__.py  _version.py  app_config.py  authentication.py  download_my_uploads.py  new_description.py  update_description.py  update_notifications.py
ytad/cli/: __init__.py
ytad/config/: app_config.py
