[project]
name = ytad
description = A tool that can automate text for YouTube video descriptions.
long_description = {file = "README.md"}
requires-python = ">=3.7"
url = https://pypi.org/project/ytad/
authors = [{email = "business.inquiry.spao@gmail.com"}, {name = "Spencer Pao"}]
author_email = business.inquiry.spao@gmail.com
license = {file = "LICENSE.txt"}
platforms = any
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering"]

[project.urls]
Bug Tracker = https://github.com/SpencerPao/YouTube_Automation/issues
Source Code = https://github.com/SpencerPao/YouTube_Automation

[versioneer]
VCS = git
style=pep440-pre
versionfile_source = ytad/_version.py
versionfile_build = ytad/_version.py
tag_prefix =''

[build-system]
requires = ["setuptools>=42", "versioneer-518"]
build-backend = "setuptools.build_meta"
